--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2024-03-22 Version: v3.0.0
+- Update API DescribeExpressConnectRouterAllowedPrefixHistory: add param AssociationId.
+- Update API DescribeExpressConnectRouterAllowedPrefixHistory: delete param AssociatonId.
+
+
 2024-03-19 Version: v2.0.0
 - Delete API GetExpressConnectRouter.
 
