--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2024-03-26 Version: v3.0.1
+- Update API DescribeExpressConnectRouterChildInstance: update response param.
+
+
 2024-03-22 Version: v3.0.0
 - Update API DescribeExpressConnectRouterAllowedPrefixHistory: add param AssociationId.
 - Update API DescribeExpressConnectRouterAllowedPrefixHistory: delete param AssociatonId.
