--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,13 @@
+2024-06-17 Version: v3.1.0
+- Support API ListTagResources.
+- Support API MoveResourceGroup.
+- Support API TagResources.
+- Support API UntagResources.
+- Update API CreateExpressConnectRouter: add param Tags.
+- Update API CreateExpressConnectRouterAssociation: update param AllowedPrefixes.
+- Update API ModifyExpressConnectRouterAssociationAllowedPrefix: update param AllowedPrefixes.
+
+
 2024-03-26 Version: v3.0.1
 - Update API DescribeExpressConnectRouterChildInstance: update response param.
 
